--- a/src/app/security/login/login.component.html
+++ b/src/app/security/login/login.component.html
@@ -21,7 +21,7 @@
                 Password is required
                 </span>
             </div>
-            <button type="submit" class="btn btn-primary float-right">Login</button>
+            <button type="submit" class="btn btn-primary">Login</button>
         </form>
     </section>
 </section>
