--- a/src/app/dashboard/header/header.component.html
+++ b/src/app/dashboard/header/header.component.html
@@ -1,10 +1,34 @@
-<section class="header">
-    <ul class="menu">
-        <li><a (click)="navigateToUrl(path.PRODUCTS)"
-            [ngClass]="currentUrl == path.PRODUCTS ? 'hightlight': ''">Products</a></li>
-        <li><a (click)="navigateToUrl(path.USERS)" [ngClass]="currentUrl == path.USERS ? 'hightlight': ''">Users</a></li>
-        <li><a (click)="logout()">Logout</a></li>
-        
-    </ul>    
-   
-</section>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        <ul class="navbar-nav mr-auto">
+        </ul>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">  
+            <li class="nav-item active">
+                <a class="nav-link" (click)="navigateToUrl(path.PRODUCTS)">Products</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" (click)="navigateToUrl(path.USERS)">Users</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" (click)="navigateToUrl(path.TREE_VIEW)">Tree View</a>
+            </li>   
+        </ul>
+        <ul class="navbar-nav ms-auto">
+            <li class="nav-item dropdown float-right" *ngIf="currentSession">
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    <img src="assets/images/avatar.png" class="profile-pic">&nbsp;&nbsp;
+                    {{currentSession.name | formatObj}}
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" (click)="logout()">Logout</a>
+                </div>
+            </li>
+        </ul>
+    </div>
+</nav>
