--- a/src/app/products/add-edit/add-edit.component.html
+++ b/src/app/products/add-edit/add-edit.component.html
@@ -1,9 +1,9 @@
 <div class="container">
 <div class="box min-500">
-    <div class="">
-        <button type="button" class="btn btn-outline-secondary mr-2" (click)="navigateToProducts()"><i class="fa fa-chevron-left"></i> All Products</button>
-        <button type="reset" (click)="reset()" class="btn btn-secondary mr-2">Clear</button>
-        <button type="submit" class="btn btn-success mr-2" (click)="save()">Save</button>
+    <div>
+        <button type="button" class="btn btn-outline-secondary" (click)="navigateToProducts()"><i class="fa fa-chevron-left"></i> All Products</button>
+        <button type="button" (click)="reset()" class="btn btn-secondary ">Clear</button>
+        <button type="button" class="btn btn-success" (click)="save()">Save</button>
     </div>
     <form [formGroup]="productFormGroup" #f="ngForm" *ngIf="productFormGroup">
         <div class="row min-500">
@@ -35,7 +35,7 @@
         </div>
         <div class="form-group">
             <label for="price">Price</label>
-           <input type="text" class="form-control" formControlName="price" format-currency>
+           <input type="text" class="form-control" formControlName="price" [mask]="'ON'" [maskPattern]="'$xx.xx'" [dataType]="maskDataType.NUMERIC">
            <span class="form-text text-danger" *ngIf="isSubmitted  && productFormGroup.get('price').errors?.required">
             Price is required
           </span>
