--- a/src/app/products/list/list.component.html
+++ b/src/app/products/list/list.component.html
@@ -1,1 +1,46 @@
-<common-list [listData]="tableData"></common-list>
+<common-list [listData]="tableData">
+    <div id="sidebar-container" class="sidebar-expanded d-none d-md-block">
+        <!-- d-* hiddens the Sidebar in smaller devices. Its itens can be kept on the Navbar 'Menu' -->
+        <!-- Bootstrap List Group -->
+        <ul class="list-group">
+            <!-- Separator with title -->
+            <li class="list-group-item sidebar-separator-title text-muted d-flex align-items-center menu-collapsed">
+                <b>Filter By:</b>
+            </li>
+            <!-- /END Separator -->
+            <!-- Menu with submenu -->
+            <a href="#submenu1" data-toggle="collapse" aria-expanded="false"
+                class="bg-dark list-group-item list-group-item-action flex-column align-items-start">
+                <div class="d-flex w-100 justify-content-start align-items-center">
+                    <span class="fa fa-dashboard fa-fw mr-3"></span>
+                    <span class="menu-collapsed">Categories</span>
+                    <span class="submenu-icon ml-auto"></span>
+                </div>
+            </a>
+            <!-- Submenu content -->
+            <div id='submenu1' class="collapse sidebar-submenu">
+                <a class="list-group-item list-group-item-action bg-light text-black" *ngFor="let categeory of categories">
+                    <span class="menu-collapsed"  (click)="filterByCategory(categeory)">{{categeory}}
+                    </span>                  
+
+                    <span class="fa fa-check mr-3 float-right" *ngIf="isFilterEnabled(ProductListTitles.CATEGORY, categeory)"></span>
+                </a>
+            </div>
+            <a href="#submenu2" data-toggle="collapse" aria-expanded="false"
+                class="bg-dark list-group-item list-group-item-action flex-column align-items-start">
+                <div class="d-flex w-100 justify-content-start align-items-center">
+                    <span class="fa fa-user fa-fw mr-3"></span>
+                    <span class="menu-collapsed">User Rating</span>
+                    <span class="submenu-icon ml-auto"></span>
+                </div>
+            </a>
+            <!-- Submenu content -->
+            <div id='submenu2' class="collapse sidebar-submenu">
+                <a class="list-group-item list-group-item-action bg-light text-black cursor-pointer"  *ngFor="let rate of ratings" (click)="filterByRating(rate)">
+                    <span class="menu-collapsed" [innerHTML]="rate | rating"></span>
+                    <span class="fa fa-check mr-3 float-right" *ngIf="isFilterEnabled(ProductListTitles.RATING, rate)"></span>
+                </a>
+            </div>
+        </ul><!-- List Group END-->
+    </div>
+</common-list>
