--- a/src/app/security/login/login.component.scss
+++ b/src/app/security/login/login.component.scss
@@ -1,9 +1,61 @@
-.box {    
-  background-color: lightblue;
+
+.login-box {
+  background: #1A2226;
+  color: white;
+  text-align: center; 
+  line-height: 50px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;    
+    margin: auto;
+    width: 450px;
+    height: fit-content;
 }
 
-.form {
-    margin-left: 20px;
-    margin-right:0;
-    
+.login-box input {
+  border: none;
+  border-top: 0px;
+  border-bottom: 2px solid  #0DB8DE;
+  background-color: #1A2226;
+  color: white;
+}
+
+
+.login-box input:focus {
+  outline: none;
+  color: white;
+  background-color: #1A2226;
+  border:none;
+}
+
+.login-box label {
+  float: left;
+}
+
+
+#login img{
+  margin: 10px 0;
+}
+#login .center {
+  text-align: center;
+}
+
+#login .login {
+  max-width: 300px;
+  margin: 35px auto;
+}
+
+#login .login-form{
+  padding:0px 25px;
+}
+
+.input-group-append {
+  border-bottom: 2px solid #0DB8DE;
+}
+
+.login-box > h1 {
+  padding: 8%;
 }
