--- a/src/app/store-common/common-list/common-list.component.scss
+++ b/src/app/store-common/common-list/common-list.component.scss
@@ -1,17 +1,11 @@
-table{
-    width: 100%;
-}
-
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-
-th, td {
-padding: 15px;
-}
-
 img {
 width: 150px;
 height: 150px;
+}
+
+#search {
+  width: 42%;
+  margin: 0 10% 0 25%;
+  padding: 5px;
+  border-radius: 4px;
 }
