--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,109 +1,6 @@
-$btn-primary: navy;
-$btn-secondary: grey;
-$btn-success: green;
-$btn-danger: red;
-$btn-warning: orange;
-$btn-info: lightseagreen;
+@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
 
-body {
-  overflow: auto;
-  overflow-y: auto;
-}
-.container {
-  padding-left: 20px;
-  padding-left: 20px;
-  margin-left: 20px;
-  margin-right: 20px;
-}
 
-.box {
-  display: grid;
-  margin: 2%;
-  padding: 10px;
-  width: fit-content;
-  margin-right: 10px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-}
-
-.form-group {
-  margin-top: 2%;
-  margin-bottom: 10%;
-  line-height: 30px;
-}
-
-.form-control {
-  display: block;
-  width: 65%;
-  padding: 3%;
-  border: 1px solid grey;
-}
-
-select.form-control {
-  display: block;
-  width: 70%;
-  padding: 3%;
-  border: 1px solid grey;
-}
-
-form{
-  padding: 2%;
-}
-
-label {
-  font-weight: bold;
-  margin-left: 10px;
-  margin-bottom: 10px;
-}
-//text
-
-.text-center {
-  text-align: center;
-}
-
-.text-danger {
-  color: red;
-}
-
-.text-link {
-  text-decoration: underline;
-  color: blueviolet;
-  cursor: pointer;
-}
-
-//button
-
-.btn {
-  //border-radius: 10px;
-  padding: 2%;
-  min-width: 20%;
-  cursor: pointer;
-}
-
-.btn-primary {
-  background-color: $btn-primary;
-  color: white;
-}
-
-.btn-secondary {
-  background-color: grey;
-  color: black;
-}
-
-.btn-outline-secondary {
-  border-color: grey;
-  color:black
-}
-.btn-outline-secondary:hover {
-  background-color: grey;
-}
-
-.btn-success {
-  background-color: $btn-success;
-  color: white;
-}
-
-// Float 
 .float-right {
   float: right;
 }
@@ -112,35 +9,32 @@ label {
   float: left;
 }
 
-a {
-  cursor: pointer;
+.profile-pic {
+  width: 35px;
+  border-radius: 30px;
 }
 
-
-.page-center {
-  top: 30%;
-  left: 40%;
-  position: absolute;
+body {
+ // background: #222D32;
 }
 
-.min-500 {
- min-width: 500px;
+.container {
+ padding: 10%;
+}
+.form-group {
+  margin-bottom: 10px;
 }
 
-infinite-scroll {
-  overflow-y: auto;
+.btn-outline-primary {
+  color: #0DB8DE;
+  border-color: #0DB8DE;
 }
 
-//margin
-.mr-2 {
-  margin-right: 1rem;
+.btn-outline-primary:hover {
+  color: white;
+  background-color: #0DB8DE;
 }
 
-.hightlight {
-  background-color: lightgray;
-  color:black;
-}
-
-a {
+.btn, a {
   cursor: pointer;
 }
